# safe-agent-runtime-core

./: .gitignore  AUDIT_REPORT.md  AUDIT_SECOND_PASS.md  LICENSE  README.md  channel.py  compile.py  conftest.py  demo.py  demo_llm.py  demo_proxy.py  evaluator.py  executor.py  ir.py  models.py  pyproject.toml  registry.py  requirements.txt  runtime.py  sandbox.py  taint.py  world.yaml  world_manifest.yaml
docs/: architecture.md  capability-rendering.md  comparison.md  demo-script.md  one-pager.md  positioning.md  why-this-matters.md
examples/: langchain_integration.py  mcp_server_with_proxy.py  openai_responses_integration.py
runtime/: __init__.py  channel.py  compile.py  executor.py  ir.py  llm_demo.py  models.py  protocol.py  proxy.py  runtime.py  taint.py  worker.py
src/: __init__.py  errors.py  registry.py  runtime.py  types.py  world_loader.py
tests/: test_determinism.py  test_llm_demo.py  test_new_runtime.py  test_process_boundary.py  test_proxy.py  test_runtime.py  test_typed_denial.py
